tests/NormalTests/paczka2/big_fuzzy/99322579.err
Error in line 4: erioTSYH S92 7,3
Error in line 1: 2MqXjYjH37I S92 98,6
Error in line 7: 2MqXjYjH37I S346 46,4
Error in line 17: qAraamFdg A33m m,0
Error in line 11: A334 S571 3,6
Error in line 18: A334 S346 79,0
Error in line 10: qAraa4Fdg S346 66,2
Error in line 27: fs1YP S92 16,2
Error in line 26: qAraa4Fdg A334 13,2
Error in line 35: qAraa4Fdg S346 41,8
Error in line 51: fKQyIOonbou S92 41,2
Error in line 52: 2MqXjYjH37I A334 22,2
Error in line 56: 2MqXjYjH37I S92 85,8
Error in line 61: A334 S571 72,0
Error in line 64: A334 S92 39,4
Error in line 55: erioTSYH S346 27,1
Error in line 72: 5b2S9dCwG A334 12,4
Error in line 79: erioTSYH A334 -2,5
Error in line 81: fKQyIOonbou S92 75,01
Error in line 86: qAraa4Fdg A334 86,5
Error in line 89: A334 S571 26,8
Error in line 67: erioTSYH A334 48,8
Error in line 91: A334 A334 10,7
Error in line 100: 5b2S9dCwG S92 49,9
Error in line 99: A334 S346 9,9
Error in line 108: fKQyIOonbou S346 75,5
Error in line 119: fKQyIOonbou S92 44,6
Error in line 134: erioTSYH A334 48,9
Error in line 128: 2MqXjYjH37I A334 78,4
Error in line 133: 5b2S9dCwG S346 29,3
Error in line 143: 5b2S9dCwG A334 68,0
Error in line 141: 2MqXjYjH37I S571 2,4
Error in line 171: 2MqXjYjH37I S346 64,5
Error in line 161: qAraa4Fdg S346 99,8
Error in line 173: 2MqXjYjH37I A334 59,9
Error in line 190: 2MqXjYjH37I S571 8,3
Error in line 180: A334 S571 72,6
Error in line 176: fs1YP S571 26,7
Error in line 217: erioTSYH S346 41,2
Error in line 225: qAraa4Fdg S92 63,4
Error in line 230: qAraa4Fdg A334 33,4
Error in line 247: qAraa4Fdg S571 14,0
